--- a/src/Makefile
+++ b/src/Makefile
@@ -30,8 +30,8 @@ clean:
 PROTOCOL = 0
 # TRACE_FILE = ../trace/canneal.04t.debug
  TRACE_FILE = ../trace/canneal.04t.longTrace
-# VALIDATION_FILE = ../val/msi_debug.val
-VALIDATION_FILE = ../val/mesi_filter_long.val
+ VALIDATION_FILE = ../val/msi_long.val
+# VALIDATION_FILE = ../val/mesi_filter_long.val
 
 run: all
 	@echo "*** Running ./smp_cache 8192 8 64 4 $(PROTOCOL) $(TRACE_FILE) ***"
